--- a/nimbus-user/pom.xml
+++ b/nimbus-user/pom.xml
@@ -41,6 +41,16 @@
             <artifactId>api-user</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.spud.nimbus</groupId>
+            <artifactId>api-auth</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.spud.nimbus</groupId>
+            <artifactId>common-security</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
