[v0.1.4] finish biz service

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>nimbus-api/api-leaf</module>
         <module>nimbus-user</module>
         <module>nimbus-product</module>
+        <module>nimbus-biz</module>
     </modules>
 
     <parent>
