--- a/nimbus-auth/pom.xml
+++ b/nimbus-auth/pom.xml
@@ -9,8 +9,8 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.spud</groupId>
     <artifactId>nimbus-auth</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
