--- a/nimbus-common/common-database/pom.xml
+++ b/nimbus-common/common-database/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>com.spud.nimbus</groupId>
             <artifactId>common-core</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
